--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,3 @@
-<!-- Footer -->
-<footer class="text-center text-sm text-gray-500 py-8 border-t">
+<footer class="border-t-8 border-black bg-soft text-black text-center text-sm py-6 fixed bottom-0 left-0 w-full font-mono font-extrabold">
   &copy; {{ year }} Yayasan Perguruan Immanuel Medan. Seluruh hak dilindungi.
 </footer>
